# defender-py

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/stackone_defender/: __init__.py  config.py  types.py
src/stackone_defender/classifiers/: onnx_classifier.py  pattern_detector.py  patterns.py  tier2_classifier.py  tier3_orchestrator.py
src/stackone_defender/core/: prompt_defense.py  tool_result_sanitizer.py
src/stackone_defender/sanitizers/: __init__.py  encoding_detector.py  leet_normalizer.py  normalizer.py  sanitizer.py
src/stackone_defender/sfe/: preprocess.py
src/stackone_defender/utils/: boundary.py
tests/: test_integration.py  test_onnx_classifier.py  test_pattern_detector.py  test_sanitizers.py  test_sfe.py  test_tier2_classifier.py  test_tier3.py  test_utils.py
